overflow issue landing

--- a/src/sass/_clientoverview.scss
+++ b/src/sass/_clientoverview.scss
@@ -7,7 +7,7 @@
 
 .panel2-overview {
   min-width: 100%;
-  min-height: 45vh;
+  min-height: 40vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -17,7 +17,7 @@
 
 .transactions-widget {
   min-width: 60%;
-  max-height: 45vh;
+  max-height: 40vh;
   @extend %claymorph;
   display: flex;
   justify-content: flex-start;
