--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -22,7 +22,7 @@
 }
 
 body {
-  display: grid;
+  display: flex;
   min-width: 100%;
   min-height: 100vh;
   max-width: 100%;
